# challenge-homely

./: .env.example  Cargo.toml  Procfile  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2022-05-02-012936_create_basics/: down.sql
migrations/2022-05-03-012844_create_roles/: down.sql  up.sql
migrations/2022-05-07-231003_create_users/: down.sql  up.sql
migrations/2022-05-07-231014_create_concepts/: down.sql  up.sql
migrations/2022-05-09-020123_create_access_tokens/: up.sql
migrations/2022-05-13-013419_create_customers/: down.sql  up.sql
migrations/2022-05-13-013635_create_services_types/: down.sql  up.sql
migrations/2022-05-13-013946_create_ticket_statuses/: down.sql  up.sql
migrations/2022-05-13-014022_create_services/: down.sql  up.sql
migrations/2022-05-13-014237_create_tickets/: down.sql  up.sql
src/: app.rs  main.rs  schema.rs
src/handlers/: auth.rs  balance.rs  concept.rs  customer.rs  mod.rs  service.rs  ticket.rs  user.rs
src/models/: concept.rs  customer.rs  mod.rs  role.rs  server.rs  service.rs  ticket.rs  token.rs  user.rs
src/routes/: auth.rs  concept.rs  customer.rs  mod.rs  service.rs  ticket.rs  user.rs
src/services/: auth.rs  errors.rs  mod.rs  request.rs  response.rs  server.rs  user_response.rs
src/utils/: constants.rs  dates.rs  mod.rs  port.rs
